--- a/String.ipynb
+++ b/String.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is rupesh <class 'str'>\n"
+      "this is rupesh <class 'str'>\n",
+      "This is Rupesh <class 'str'>\n",
+      "this is \n",
+      " rupesh <class 'str'>\n"
      ]
     }
    ],
    "source": [
-    "a=(\"this is rupesh\")\n",
-    "print(a,type(a))"
+    "a=\"this is rupesh\"\n",
+    "b=\"This is Rupesh\"\n",
+    "c=\"this is \\n rupesh\"\n",
+    "print(a,type(a))\n",
+    "print(b,type(b))\n",
+    "print(c,type(c))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +36,7 @@
        "'This is rupesh'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -49,19 +56,18 @@
        "'this is rupesh'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b=\"This is Rupesh\"\n",
     "b.casefold()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +76,7 @@
        "'                  this is rupesh                  '"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +96,7 @@
        "2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +116,7 @@
        "b'this is rupesh'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +136,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +156,7 @@
        "'this is rupesh'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +176,7 @@
        "9"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +204,7 @@
        "'this is \\n rupesh'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +226,7 @@
        "'this is \\n rupesh'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +246,7 @@
        "11"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +266,7 @@
        "False"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -280,18 +286,19 @@
        "False"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "e=\"salkdfklasd\"\n",
     "a.isalpha()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -300,13 +307,594 @@
        "False"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a.isdecimal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.isidentifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.islower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "a.isnumeric()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.isprintable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.isspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.isspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.istitle()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.isupper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kthis is rupeshithis is rupeshnthis is rupeshg'"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.join(\"king\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.ljust(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.lstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('thi', 's', ' is rupesh')"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.partition(\"s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is daksh'"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.replace(\"rupesh\",\"daksh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.rfind(\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.rindex(\"e\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.rjust(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('this is ', 'r', 'upesh')"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.rpartition(\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['this', 'is', 'rupesh']"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.rsplit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['this', 'is', 'rupesh']"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['this is rupesh']"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.startswith(\"t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'THIS IS RUPESH'"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.swapcase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This Is Rupesh'"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.translate(\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'THIS IS RUPESH'"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is rupesh'"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.zfill(2)"
    ]
   },
   {
